fixed quantity display readability

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -127,11 +127,16 @@ html, body {
 	width: 160px;
 	height: 300px;
 	border-radius: $corner-radius;
-	display: flex;
-	flex-direction: column;
-	padding: 30px 24px;
 	box-shadow: 0 8px 8px rgba(0, 0, 0, .1);
 	position: relative;
+	padding: 30px 24px;
+
+	.item-info-wrapper {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+	}
 
 	.item-card-img {
 		border-radius: $corner-radius;
@@ -167,11 +172,14 @@ html, body {
 	.purchase-form {
 		position: absolute;
 		width: calc(100% - 48px);
-		height: 100%;
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
 		align-items: center;
+		bottom: 16px;
+	}
+
+	.quantity-label {
+		@include primary-text($vert-margin: -14px);
 	}
 
 	.purchase-quantity {
@@ -180,9 +188,10 @@ html, body {
 		text-align: center;
 		width: 50%;
 		margin: 12px auto;
-		background-color: rgba(255, 255, 255, .3);
+		background-color: rgba(255, 255, 255, .5);
 		border-radius: $corner-radius;
 		outline: none;
+		border: solid 2px rgba($color-secondary, .6);
 	}
 
 	.buy-now-button {
@@ -194,6 +203,10 @@ html, body {
 .item-card-container:hover {
 	transition: .3s;
 	transform: translateY(-5px);
+}
+
+.blur {
+	filter: blur(3px);
 }
 
 .login-backdrop {
